# vlt-rs

./: Cargo.toml  LICENSE  README.md  cli-design.txt
crates/cli/: Cargo.toml
crates/cli/src/: daemon_utils.rs  main.rs
crates/cli/src/commands/: add_credential.rs  get_credential.rs  mod.rs  nuke_credentials.rs  update_credential.rs
crates/cli/src/commands/config/: mod.rs  purge.rs  reset_pass.rs
crates/cli/src/commands/identifier/: mod.rs
crates/cli/src/commands/password/: add.rs  edit.rs  get.rs  mod.rs  rm.rs
crates/cli/src/commands/service/: mod.rs
crates/cli/src/utils/: credential_utils.rs  daemon_utils.rs  mod.rs  selectable_utils.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: file.rs  main.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
