[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vlt"
path = "src/main.rs"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.54", features = ["derive"] }
keyring = "3.6.3"
storage = { workspace = true }
core = { workspace = true }
secrecy = "0.10.3"
rpassword = "7.4.0"
dialoguer = "0.12.0"
console = "0.16.2"
